# python_project_v1

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  _config.yml  _toc.yml  data_classes.html  genindex.html  index.html  index.md  intro.html  metrics.html  models.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: data_classes.doctree  environment.pickle  index.doctree  intro.doctree  metrics.doctree  models.doctree
.github/workflows/: ci.yml  github-actions-demo.yml
_sources/: data_classes.rst.txt  index.rst.txt  metrics.rst.txt  models.rst.txt
docs/: conf.py  data_classes.rst  index.rst  intro.rst  metrics.rst
docs/diagrams/: data_classes.puml  solver.puml
docs/diagrams_temp/: servicio_web_de_slotting.py
python_project/: __init__.py
python_project/data/: __init__.py  data.py  params.py  problem.py  result.py
python_project/metrics/: __init__.py  base.py  standard.py
python_project/models/: __init__.py  base.py  constant.py  ma.py
tests/data/: conftest.py  data.csv  test_data.py  test_params.py  test_problem.py  test_result.py
tests/metrics/: test_base.py  test_standard.py
tests/models/: test_base.py  test_constant.py  test_ma.py
