[tool.poetry]
name = 'python_project'
version = "0.1.0"
description = 'simple python project'
authors = [ 'Francisco Alfaro <francisco.alfaro.496@gmail.com>']

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pydantic = "1.5.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
hypothesis = "^5.26.1"
sphinx = "^3.2.1"
sphinxcontrib-plantuml = "^0.18"
sphinx-rtd-theme = "^0.5.0"
sphinx-jsonschema = "1.15"
sphinxcontrib-bibtex = "^1.0.0"
pre-commit = "^2.6.0"
diagrams = "^0.18.0"
black = "^20.8b1"
flake8 = "^3.4.0"
Deprecated = "^1.2.12"
mypy = "^0.910"
autodoc-pydantic = "^1.5.0"

[tool.black]
line-length = 79

[tool.poetry.scripts]
python_project = 'python_project.cli.cli:entry_point'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"






